fix: fixed spacing

--- a/packages/client/src/assets/scss/components/_menubar.scss
+++ b/packages/client/src/assets/scss/components/_menubar.scss
@@ -63,7 +63,7 @@
   .hiconclm {
     display: flex !important;
     .bar {
-      margin-left: 55%;
+      margin-left: 65%;
     }
   }
 }
